--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
+    "font-awesome": "4.7.0",
     "ionic-angular": "3.7.1",
+    "ionic-img-viewer": "^2.7.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
